# routes/api.php
@@ -1,7 +1,8 @@
 <?php
 
-use App\Http\Controllers\EventController;
+use App\Http\Controllers\PlayerController;
 use App\Http\Controllers\TournamentController;
+use App\Http\Controllers\Tournament\PlayerController as TournamentPlayerController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -20,12 +21,23 @@ use Illuminate\Support\Facades\Route;
 //     return $request->user();
 // });
 
-Route::group(['prefix' => 'tournaments'], function(){
-    Route::get('/', TournamentController::class)->name('tournaments');
-    Route::get('/{id}', [TournamentController::class, 'show'])->name('tournament');
-    Route::post('/', [TournamentController::class, 'create']);
-    Route::put('/{id}', [TournamentController::class, 'update']);
-    Route::delete('/{id}', [TournamentController::class, 'destroy']);
+Route::group(['prefix' => 'tournaments', 'controller' => TournamentController::class], function(){
+    Route::get('/', 'index')->name('tournaments');
+    Route::get('/{id}', 'show')->name('tournament');
+    Route::post('/', 'create');
+    Route::put('/{id}', 'replace');
+    Route::delete('/{id}', 'destroy');
+
+    Route::group(['prefix' => '{tournament}/players', 'controller' => TournamentPlayerController::class], function(){
+        Route::get('/', 'index')->name('tournaments.players');
+        Route::post('/', 'create');
+    });
+});
+
+Route::group(['prefix' => 'players'], function(){
+    Route::get('/{id}', [PlayerController::class, 'show'])->name('player');
+    Route::put('/{id}', [PlayerController::class, 'replace']);
+    Route::delete('/{id}', [PlayerController::class, 'destroy']);
 });
 
 Route::any('{any}', function(){
